...
                    )
                }
            },
            modifier = Modifier
                .background(Color.Transparent)
                .weight(1f)
                .testTag("TagEditField")
        )
    }
    TagChips(
        tags = tags,
        onTagRemove = { tag ->
            onTagRemove(tag)
...
