...
                verticalArrangement = Arrangement.spacedBy(8.dp),
                modifier = Modifier
                    .background(MaterialTheme.colorScheme.surfaceVariant)
                    .testTag("TagTextFieldTagsContainer")
            ) {
                tags.forEach { tag ->
                    TagChip(
                        tag = tag,
                        onTagRemove = {
                            onTagRemove(tag)
                        }
                    )
                }
...
